tests/ui/crossed_streams.stderr
error[E0597]: `b` does not live long enough
 --> tests/ui/crossed_streams.rs:5:5
  |
5 |     make_guard!(b);
  |     ^^^^^^^^^^^^^^
  |     |
  |     borrowed value does not live long enough
  |     binding `b` declared here
6 |     dbg!(a == b); // ERROR (here == is a static check)
7 | }
  | -
  | |
  | `b` dropped here while still borrowed
  | borrow might be used here, when `lifetime_brand` is dropped and runs the `Drop` code for type `LifetimeBrand`
  |
  = note: values in a scope are dropped in the opposite order they are defined
  = note: this error originates in the macro `make_guard` (in Nightly builds, run with -Z macro-backtrace for more info)
